--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -1,41 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="@dimen/edge_padding"
+    android:background="@android:color/black">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/defaultMessage"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:text="Listo para cargar control"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:layout_gravity="center" />
 
-        <TextView
-            android:id="@+id/textViewWear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Esperando mensaje"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-            android:textAlignment="center"
-            android:layout_marginBottom="12dp" />
+    <!-- Contenedor para los fragments -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <EditText
-            android:id="@+id/inputMessageWear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Escribe mensaje"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textAlignment="center"
-            android:background="@android:color/transparent"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
-
-        <Button
-            android:id="@+id/buttonSendWear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Enviar"
-            android:layout_marginTop="8dp" />
-
-    </LinearLayout>
-</ScrollView>
+</androidx.wear.widget.BoxInsetLayout>
